gccida/c3/simplify_subtraction
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_subtraction/src/varasm.c:4140:21: error: use of undeclared identifier 'machine_mode'
decode_rtx_const( ( machine_mode)*( ( unsigned __int8 *)x + 2), x->fld[0].rtx, &value); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_subtraction/src/varasm.c:4141:21: error: use of undeclared identifier 'machine_mode'
decode_rtx_const( ( machine_mode)*( ( unsigned __int8 *)x + 2), *( rtx *)&x[1], &v2); 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_subtraction/src/obj/varasm.o] Error 1
